# rbac_builder

./: .bumpversion.cfg  PKG-INFO  README.md  pyproject.toml  setup.py
rbac_builder/: __init__.py  base.py  base_manager.py  baseview.py  const.py  menu.py  models.py  utils.py
rbac_builder/security/: decorators.py  manager.py
rbac_builder/security/sqla/: manager.py
rbac_builder/security/sqla/models/: __init__.py  permission.py  permission_view.py  role.py  view_menu.py
tests/: realpython_20180919.xml  realpython_descriptions_20180919.xml  test_feed.py  test_viewer.py
