[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "rbac_builder"
author = "Kidataek"
author-email = "tuankiet0996@gmail.com"
home-page = "https://github.com/tukida/rbac_builder"
classifiers = ["License :: OSI Approved :: MIT License"]

